--- a/rs/tests/boundary_nodes/Cargo.toml
+++ b/rs/tests/boundary_nodes/Cargo.toml
@@ -19,6 +19,10 @@ name = "ic-systest-bn-integration-on-playnet"
 path = "boundary_nodes/bn_integration_on_playnet_test.rs"
 
 [[bin]]
+name = "ic-systest-certificate-orchestrator"
+path = "boundary_nodes/certificate_orchestrator_test.rs"
+
+[[bin]]
 name = "ic-systest-api-bn-decentralization"
 path = "boundary_nodes/api_bn_decentralization_test.rs"
 
