--- a/packages/icrc-ledger-types/Cargo.toml
+++ b/packages/icrc-ledger-types/Cargo.toml
@@ -15,6 +15,7 @@ base32 = "0.4.0"
 candid = { workspace = true }
 crc32fast = "1.2.0"
 hex = { workspace = true }
+ic-stable-structures = { workspace = true }
 itertools = { workspace = true }
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
