--- a/rs/tests/nns/Cargo.toml
+++ b/rs/tests/nns/Cargo.toml
@@ -13,6 +13,7 @@ canister-test = { path = "../../rust_canisters/canister_test" }
 ic-agent = { workspace = true }
 ic-btc-interface = { workspace = true }
 ic-config = { path = "../../config" }
+ic-mainnet-nns-recovery = { path = "../../tests/nns/ic_mainnet_nns_recovery" }
 ic-nns-constants = { path = "../../nns/constants" }
 ic-nns-governance-api = { path = "../../nns/governance/api" }
 ic-nns-test-utils = { path = "../../nns/test_utils" }
