feat(IDX): bazel coverage in PR run / upload to S3 (#1968)
Allow running `bazel coverage` on PR when `CI_COVERAGE` label is set.
Report is uploaded to S3 and URL logged and set as run annotation.


![image](https://github.com/user-attachments/assets/e7bb9fa9-8b94-4160-895a-42561526c319)

---------

Co-authored-by: IDX GitHub Automation <IDX GitHub Automation>
Co-authored-by: Rostislav Rumenov <rostislav.rumenov@dfinity.org>
Co-authored-by: IDX GitHub Automation <infra+github-automation@dfinity.org>
Co-authored-by: Ruediger Birkner <ruediger.birkner@dfinity.org>
Co-authored-by: max-dfinity <100170574+max-dfinity@users.noreply.github.com>
Co-authored-by: Arshavir Ter-Gabrielyan <arshavir.ter.gabrielyan@dfinity.org>
Co-authored-by: Andrew Battat <113942931+andrewbattat@users.noreply.github.com>
Co-authored-by: Paul Liu <paul@dfinity.org>
Co-authored-by: Thomas Locher <thomas.locher@dfinity.org>
Co-authored-by: gregorydemay <112856886+gregorydemay@users.noreply.github.com>
Co-authored-by: Bas van Dijk <bas@dfinity.org>
Co-authored-by: Nicolas Mattia <nicolas.mattia@dfinity.org>
Co-authored-by: sa-github-api <138766536+sa-github-api@users.noreply.github.com>
Co-authored-by: CI Automation <infra@dfinity.org>

--- a/.github/workflows-source/ci-main.yml
+++ b/.github/workflows-source/ci-main.yml
@@ -388,3 +388,21 @@ jobs:
           set -eExuo pipefail
           buildevents cmd "$CI_RUN_ID" "$CI_JOB_NAME" build-command -- \
               cargo build --release --locked
+
+  # CI job is also executed in Schedule Hourly
+  bazel-test-coverage:
+    name: Bazel Test Coverage
+    <<: *dind-large-setup
+    if: |
+      github.event_name == 'pull_request' &&
+      contains(github.event.pull_request.labels.*.name, 'CI_COVERAGE')
+    steps:
+      - <<: *checkout
+      - <<: *before-script
+      - name: Run Bazel Test Coverage
+        shell: bash
+        run: |
+          ./ci/scripts/bazel-coverage.sh
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
