Fix additional node_index reference in ic.json5

--- a/ic-os/components/ic/ic.json5.template
+++ b/ic-os/components/ic/ic.json5.template
@@ -3,7 +3,7 @@
     // Global Replica Configuration
     // ============================================
 
-    node_id: "{{ node_index }}",
+    node_id: "0",
 
     // =======================================================
     // Configuration of transport parameters and node identity
