--- a/packages/pocket-ic/BUILD.bazel
+++ b/packages/pocket-ic/BUILD.bazel
@@ -19,6 +19,7 @@ DEPENDENCIES = [
     "@crate_index//:serde_json",
     "@crate_index//:sha2",
     "@crate_index//:slog",
+    "@crate_index//:thiserror",
     "@crate_index//:tokio",
     "@crate_index//:tracing",
     "@crate_index//:tracing-appender",
