renamed state machine tests

--- a/rs/ledger_suite/icp/index/BUILD.bazel
+++ b/rs/ledger_suite/icp/index/BUILD.bazel
@@ -31,7 +31,7 @@ DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/ledger_suite/icp/test_utils",
-    "//rs/ledger_suite/tests/sm-tests",
+    "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
     "//rs/rosetta-api/icp/test_utils",
     "//rs/state_machine_tests",
     "//rs/test_utilities/load_wasm",
