--- a/rs/ledger_suite/icp/BUILD.bazel
+++ b/rs/ledger_suite/icp/BUILD.bazel
@@ -211,7 +211,7 @@ rust_ic_test_suite(
         "//rs/ledger_suite/common/ledger_core",
         "//rs/ledger_suite/icp/index:ic-icp-index",
         "//rs/ledger_suite/icp/test_utils",
-        "//rs/ledger_suite/tests/sm-tests",
+        "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
         "//rs/nns/constants",
         "//rs/nns/test_utils/golden_nns_state",
         "//rs/rust_canisters/canister_test",
