--- a/rs/ledger_suite/icrc1/index-ng/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/index-ng/BUILD.bazel
@@ -123,7 +123,7 @@ rust_test(
             "//rs/ledger_suite/icrc1/ledger",
             "//rs/ledger_suite/icrc1/test_utils",
             "//rs/ledger_suite/icrc1/tokens_u64",
-            "//rs/ledger_suite/tests/sm-tests",
+            "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
             "//rs/registry/subnet_type",
             "//rs/rosetta-api/icp/test_utils",
             "//rs/rust_canisters/http_types",
