--- a/rs/ledger_suite/icrc1/index/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/index/BUILD.bazel
@@ -103,7 +103,7 @@ rust_ic_test(
         "//rs/ledger_suite/icrc1",
         "//rs/ledger_suite/icrc1/ledger",
         "//rs/ledger_suite/icrc1/tokens_u64",
-        "//rs/ledger_suite/tests/sm-tests",
+        "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
         "//rs/rosetta-api/icp/test_utils",
         "//rs/rust_canisters/http_types",
         "//rs/state_machine_tests",
