--- a/rs/rosetta-api/icrc1/BUILD.bazel
+++ b/rs/rosetta-api/icrc1/BUILD.bazel
@@ -64,7 +64,7 @@ DEV_DEPENDENCIES = [
     ":ic-icrc-rosetta",
     "//packages/pocket-ic:pocket-ic",
     "//rs/ledger_suite/icrc1/test_utils",
-    "//rs/ledger_suite/tests/sm-tests",
+    "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
     "//rs/rosetta-api/icp/test_utils",
     "//rs/rosetta-api/icrc1/client:ic-icrc-rosetta-client",
     "//rs/rosetta-api/icrc1/runner:ic-icrc-rosetta-runner",
