--- a/rs/recovery/Cargo.toml
+++ b/rs/recovery/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 base64 = { workspace = true }
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true}
 futures = { workspace = true }
 hex = { workspace = true }
 ic-artifact-pool = { path = "../artifact_pool" }
