--- a/rs/backup/BUILD.bazel
+++ b/rs/backup/BUILD.bazel
@@ -13,7 +13,7 @@ DEPENDENCIES = [
     "//rs/types/types",
     "@crate_index//:anyhow",
     "@crate_index//:chrono",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:rand",
     "@crate_index//:reqwest",
     "@crate_index//:serde",
