--- a/rs/bitcoin/adapter/Cargo.toml
+++ b/rs/bitcoin/adapter/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 
 [dependencies]
 bitcoin = { workspace = true }
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 futures = { workspace = true }
 hashlink = "0.8.0"
 hex = { workspace = true }
