--- a/rs/ic_os/dev_test_tools/launch-single-vm/BUILD.bazel
+++ b/rs/ic_os/dev_test_tools/launch-single-vm/BUILD.bazel
@@ -8,7 +8,7 @@ DEPENDENCIES = [
     "//rs/registry/subnet_type",
     "//rs/tests/driver:ic-system-test-driver",
     "//rs/types/types",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:reqwest",
     "@crate_index//:serde",
     "@crate_index//:slog",
