--- a/rs/nns/inspector/BUILD.bazel
+++ b/rs/nns/inspector/BUILD.bazel
@@ -11,7 +11,7 @@ DEPENDENCIES = [
     "//rs/nns/gtc",
     "//rs/rust_canisters/stable_reader",
     "//rs/types/base_types",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:csv",
     "@crate_index//:hex",
     "@crate_index//:prost",
