--- a/rs/nns/inspector/Cargo.toml
+++ b/rs/nns/inspector/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 csv = "1.1"
 hex = { workspace = true }
 ic-base-types = { path = "../../types/base_types" }
