--- a/rs/orchestrator/registry_replicator/Cargo.toml
+++ b/rs/orchestrator/registry_replicator/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "3.2.25", features = ["derive"] }
+clap = { workspace = true }
 ic-config = { path = "../../config" }
 ic-crypto-utils-threshold-sig-der = { path = "../../crypto/utils/threshold_sig_der" }
 ic-http-endpoints-metrics = { path = "../../http_endpoints/metrics" }
