--- a/rs/pocket_ic_server/BUILD.bazel
+++ b/rs/pocket_ic_server/BUILD.bazel
@@ -48,7 +48,7 @@ LIB_DEPENDENCIES = [
     "@crate_index//:bitcoin",
     "@crate_index//:bytes",
     "@crate_index//:candid",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:flate2",
     "@crate_index//:form_urlencoded",
     "@crate_index//:fqdn",
