--- a/rs/recovery/BUILD.bazel
+++ b/rs/recovery/BUILD.bazel
@@ -25,7 +25,7 @@ DEPENDENCIES = [
     "//rs/types/management_canister_types",
     "//rs/types/types",
     "@crate_index//:base64",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:futures",
     "@crate_index//:hex",
     "@crate_index//:prost",
