--- a/rs/recovery/subnet_splitting/BUILD.bazel
+++ b/rs/recovery/subnet_splitting/BUILD.bazel
@@ -14,7 +14,7 @@ DEPENDENCIES = [
     "//rs/state_tool:state_tool_lib",
     "//rs/types/base_types",
     "//rs/types/types",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:hex",
     "@crate_index//:ic-agent",
     "@crate_index//:serde",
