--- a/rs/replay/BUILD.bazel
+++ b/rs/replay/BUILD.bazel
@@ -35,7 +35,7 @@ DEPENDENCIES = [
     "//rs/state_manager",
     "//rs/types/types",
     "@crate_index//:candid",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:hex",
     "@crate_index//:prost",
     "@crate_index//:rand",
