--- a/rs/replica/BUILD.bazel
+++ b/rs/replica/BUILD.bazel
@@ -37,7 +37,7 @@ DEPENDENCIES = [
     "//rs/sys",
     "//rs/types/types",
     "//rs/xnet/payload_builder",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:hex",
     "@crate_index//:libc",
     "@crate_index//:nix",
