--- a/rs/tests/httpbin-rs/BUILD.bazel
+++ b/rs/tests/httpbin-rs/BUILD.bazel
@@ -9,7 +9,7 @@ package(default_visibility = ["//rs:system-tests-pkg"])
 DEPENDENCIES = [
     # Keep sorted.
     "@crate_index//:axum",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:hyper",
     "@crate_index//:hyper-util",
     "@crate_index//:rustls",
