--- a/rs/tests/consensus/subnet_recovery/BUILD.bazel
+++ b/rs/tests/consensus/subnet_recovery/BUILD.bazel
@@ -52,6 +52,7 @@ system_test_nns(
     tags = [
         "experimental_system_test_colocation",
         "k8s",
+        "on_push_to_master",  # since it takes longer than 5 minutes.
         "subnet_recovery",
     ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
@@ -111,6 +112,7 @@ system_test_nns(
     tags = [
         "experimental_system_test_colocation",
         "k8s",
+        "on_push_to_master",  # since it takes longer than 5 minutes.
         "subnet_recovery",
     ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
@@ -172,6 +174,7 @@ system_test_nns(
     tags = [
         "experimental_system_test_colocation",
         "k8s",
+        "on_push_to_master",  # since it takes longer than 5 minutes.
         "subnet_recovery",
     ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
@@ -254,6 +257,7 @@ system_test_nns(
     tags = [
         "experimental_system_test_colocation",
         "k8s",
+        "on_push_to_master",  # since it takes longer than 5 minutes.
         "subnet_recovery",
     ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
@@ -278,6 +282,7 @@ system_test_nns(
     tags = [
         "experimental_system_test_colocation",
         "k8s",
+        "on_push_to_master",  # since it takes longer than 5 minutes.
         "subnet_recovery",
     ],
     target_compatible_with = ["@platforms//os:linux"],  # requires libssh that does not build on Mac OS
