--- a/.github/workflows-source/release-testing.yml
+++ b/.github/workflows-source/release-testing.yml
@@ -76,6 +76,11 @@ jobs:
     uses: ./.github/workflows/ci-main.yml
     secrets: inherit
 
+  on-push-to-master:
+    name: On Push To Master
+    uses: ./.github/workflows/on-push-to-master.yml
+    secrets: inherit
+
   bazel-system-test-nightly:
     name: Bazel System Test Nightly
     <<: *dind-large-setup
