--- a/.github/workflows/on-push-to-master.yml
+++ b/.github/workflows/on-push-to-master.yml
@@ -8,6 +8,8 @@
 
 name: On Push To Master
 on:
+  # TODO: this is only temporary to test this workflow:
+  pull_request:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   push:
