--- a/rs/canister_sandbox/BUILD.bazel
+++ b/rs/canister_sandbox/BUILD.bazel
@@ -44,6 +44,7 @@ DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/registry/routing_table",
     "//rs/test_utilities/types",
+    "//rs/test_utilities/state",
     "//rs/types/management_canister_types",
     "@crate_index//:mockall",
     "@crate_index//:slog-async",
