--- a/rs/boundary_node/systemd_journal_gatewayd_shim/BUILD.bazel
+++ b/rs/boundary_node/systemd_journal_gatewayd_shim/BUILD.bazel
@@ -5,7 +5,7 @@ DEPENDENCIES = [
     "//rs/async_utils",
     "@crate_index//:anyhow",
     "@crate_index//:axum",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:http",
     "@crate_index//:itertools",
     "@crate_index//:reqwest",
