--- a/rs/ic_os/vsock/guest/BUILD.bazel
+++ b/rs/ic_os/vsock/guest/BUILD.bazel
@@ -5,7 +5,7 @@ package(default_visibility = ["//rs:ic-os-pkg"])
 DEPENDENCIES = [
     # Keep sorted.
     "//rs/ic_os/vsock/vsock_lib:vsock_lib",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
 ]
 
 MACRO_DEPENDENCIES = []
