--- a/rs/rosetta-api/icp/BUILD.bazel
+++ b/rs/rosetta-api/icp/BUILD.bazel
@@ -36,7 +36,7 @@ DEPENDENCIES = [
     "@crate_index//:anyhow",
     "@crate_index//:base64",
     "@crate_index//:candid",
-    "@crate_index//:clap_3_2_25",
+    "@crate_index//:clap",
     "@crate_index//:hex",
     "@crate_index//:ic-agent",
     "@crate_index//:lazy_static",
