check ledger version during upgrade

--- a/rs/ledger_suite/icrc1/ledger/Cargo.toml
+++ b/rs/ledger_suite/icrc1/ledger/Cargo.toml
@@ -55,3 +55,4 @@ default = []
 get-blocks-disabled = []
 u256-tokens = ["dep:ic-icrc1-tokens-u256"]
 canbench-rs = ["dep:canbench-rs", "dep:assert_matches"]
+next-ledger-version = []
